<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelTitleAccountName"
        android:id="@+id/labelUserName"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/editUserName"
        android:textSize="30sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelTitleAccountCar"
        android:id="@+id/labelUserCar"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/editUserCar"
        android:textSize="30sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonShowHistory"
        android:text="Show History"/>
    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="25dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
           <RadioGroup
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/radioGroup">
           <RadioButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Diesel"
               android:id="@+id/radioFuelType1" />

           <RadioButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Petrol"
               android:id="@+id/radioFuelType2" />

           <RadioButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="LPG"
               android:id="@+id/radioFuelType3" />
           </RadioGroup>
       </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelKmDone"
                android:id="@+id/labelKmDone"
                android:textSize="30sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editKmDone" />
        </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/labelFuelAmount"
               android:id="@+id/labelFuelAmount"
               android:textSize="30sp" />

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="numberDecimal"
               android:ems="10"
               android:id="@+id/editFuelAmount" />
       </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelFuelCost"
                android:id="@+id/labelReFuelCost"
                android:textSize="30sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editReFuelCost" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelNote"
                android:id="@+id/labelNote"
                android:textSize="30sp" />

            <EditText
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:id="@+id/editNote" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelCheckPosition"
                android:id="@+id/labelCheckPosition"
                android:textSize="30sp" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkPosition" />
        </LinearLayout>
        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ADD"
            android:id="@+id/buttonADDrecord" />


    </LinearLayout>
</ScrollView>




</LinearLayout>